fixed z-index of footer after

--- a/css/main.css
+++ b/css/main.css
@@ -327,7 +327,7 @@ footer::after{
     left: 0;
     right: 0;
     bottom: 0;
-    z-index: 1;
+    z-index: -1;
 }
 
 .lists{
@@ -428,4 +428,11 @@ footer a{
     height: 1px;
     margin: 30px 0;
     background: linear-gradient(to right,#f05a28 0,#e80a89 100%);
+}
+
+.copyright{
+    flex: 0 0 75%;
+    padding: 10px 0;
+    font-size: 12px;
+    text-align: center;
 }
